fix alignment and timing issues

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -59,23 +59,14 @@ body {
 }
 
 .floor {
-    height: 20%;
+    height: 96px;
     width: min-content;
     display: flex;
     align-items: flex-end;
     position: relative;
     padding-left: 10px; 
-    padding-right: 10px; 
-}
-.floor::after {
-  content: ""; 
-  position: absolute;
-  top: -4px; 
-  left: 0; 
-  width: 100%; 
-  height: 4px; 
-  background-color: #000; 
-  z-index: 10; 
+    padding-right: 10px;
+    border-top: #444444 1px solid;
 }
 
 .lift-container {
@@ -95,7 +86,7 @@ body {
     margin-left: 20px;
     border-radius: 8px;
     overflow: hidden;
-    border: 1px solid #333;
+    /*border: 1px solid #333;*/
 }
 
 .btnContainer {
@@ -114,7 +105,7 @@ body {
 }
 .lift__door {
     background-color: #111;
-    min-height: 80px;
+    /*min-height: 80px;*/
     width: 50%;
     height: 100%;
     position: relative;
